# frencli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TAG_COMMANDS.md  TEST_COVERAGE.md  USAGE_EXAMPLE.md
.cargo/: config.toml
src/: apply.rs  audit.rs  executor.rs  help.rs  interactive.rs  lib.rs  list.rs  main.rs  make.rs  rename.rs  rename_new.rs  subcommands.rs  template.rs  templates.rs  transform.rs  ui.rs  undo.rs  validate.rs
tests/: apply_tests.rs  audit_tests.rs  build.rs  build.sh  executor_tests.rs  generate_test_data.sh  help_tests.rs  integration_tests.rs  integration_tests.rs.disabled  list_tests.rs  make_tests.rs  rename_patterns.rs  rename_tests.rs  run_binary_test.sh  run_tests_with_timeout.sh  short_flag_tests.rs  subcommands_tests.rs  template_tests.rs  templates_tests.rs  test_utils.rs  transform_tests.rs  ui_tests.rs  undo_tests.rs  validate_tests.rs
