[package]
name = "frencli"
version = "0.1.4"
edition = "2024"
description = "CLI frontend for fren - a fast, powerful command-line batch file renaming tool"
license = "MIT"
readme = "README.md"
repository = "https://github.com/byezy/frencli"
homepage = "https://github.com/byezy/frencli"
documentation = "https://github.com/byezy/frencli#usage"
authors = ["byezy"]
keywords = ["rename", "file", "batch", "cli", "pattern"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
freneng = "0.1.2"
glob = "0.3"
chrono = "0.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[lib]
name = "frencli"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.23.0"

[[bin]]
name = "frencli"
path = "src/main.rs"

[profile.release]
# Optimize for minimal binary size
opt-level = "z"      # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization (slower compile)
strip = true        # Strip symbols from binary

[profile.test]
# Run tests sequentially to avoid directory isolation issues
# This is set via --test-threads=1 in practice
